fix(nitrite): enable remaining Jakarta TCK restrictions
Fix Nitrite predicate translation for the remaining Jakarta Data TCK restriction and constraint cases.

Add top-level NOT support to the compiled Nitrite filter AST so negated logical predicates such as NOT(AND(...)), NOT(OR(...)), and expression predicates are represented as filter composition instead of invalid field-level NOT entries. Add a match-none AST node for explicit unmatchable predicates and route property-less constant or bound comparisons through expression predicates without requiring a persistent property path.

Split LIKE predicate handling from the generic regex helper and carry LIKE pattern, escape character, and case-insensitive metadata through an internal descriptor until runtime binding. Runtime query execution now resolves placeholders first and then converts Jakarta LIKE semantics to Nitrite regexes, which is required for parameterized patterns and escape characters.

Centralize LIKE-to-regex conversion in the Nitrite runtime query layer and have compile-time literal handling reuse the same converter. This keeps literal query generation optimized while avoiding a second compile-only implementation of wildcard and escape semantics.

Update query-shape and handler unit specs for escaped custom LIKE and NOT LIKE patterns, top-level NOT AST compilation, property-less expression predicates, and the shared converter output. Remove the remaining Nitrite Jakarta TCK disables now that the skipped constraint and restriction cases pass.